fixed word/url wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,10 @@ header:not(.waiting) tabs:hover{
 
 .comment{
 	padding-bottom: 0;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-word;
+	hyphens: auto;
 }
 
 /* Animations */
